update img directionary

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </tr>
       <tr>
         <td>Images of Planets</td>
-        <td><img src="images/earth.gif" alt=""></td>
-        <td><img src="images/venus.gif" alt=""></td>
-        <td><img src="images/jupiter.gif" alt=""></td>
-        <td><img src="images/Saturn.gif" alt=""></td>
+        <td><img src="img/earth.gif" alt=""></td>
+        <td><img src="img/venus.gif" alt=""></td>
+        <td><img src="img/jupiter.gif" alt=""></td>
+        <td><img src="img/Saturn.gif" alt=""></td>
       </tr>
       <tr>
         <td>Gravity (m/s^2)</td>
